test/banana/grammar/should_fail/json_obj_props_cant_shadow.banana
# This one shadow the a.b, so this is still an error.
a = { a.b: "test", a.b: 23 }

# RAISE ParseSyntaxException